optimize remote control
